--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -33,6 +33,21 @@
     <ClCompile Include="Common\Debug\_DebugDispOut.cpp">
       <Filter>來源檔案</Filter>
     </ClCompile>
+    <ClCompile Include="Common\ImageMng.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="Common\TimeCount.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="Common\Input\KeyInput.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="Common\Input\PadInput.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
+    <ClCompile Include="Common\Function.cpp">
+      <Filter>來源檔案</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Scene\SceneManager.h">
@@ -57,6 +72,30 @@
       <Filter>標頭檔</Filter>
     </ClInclude>
     <ClInclude Include="Common\detail\Vector2.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\ImageMng.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\TimeCount.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\Input\Controller.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\Input\conTypeID.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\Input\InputID.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\Input\KeyInput.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\Input\PadInput.h">
+      <Filter>標頭檔</Filter>
+    </ClInclude>
+    <ClInclude Include="Common\Function.h">
       <Filter>標頭檔</Filter>
     </ClInclude>
   </ItemGroup>
